# todo-fixme-scanner

./: .gitignore  Cargo.toml
src/: arguments.rs  colors.rs  comments.rs  file.rs  log.rs  main.rs
src/dirTest/: lol.txt
src/dirTest/python/: main.py
src/dirTest/random/: rando.txt
