[package]
name = "todo-fixme-list"
version = "0.1.0"
authors = ["nathanlauder <laudern42@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2.3.2"
ignore = "0.4.17"
structopt = "0.3"
colored = "2"